Add basic structure for project

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/joi": "^17.2.2",
     "@types/mysql": "^2.15.26",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.21.1",
     "joi": "^17.13.3",
     "mysql": "^2.18.1"
