Start building proxyAPI

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "initDB": "node ./database/initializeDatabase.js",
     "start": "node ./dist/Proxy.js",
-    "dev": "concurrently \"nodemon\" \"browser-sync start --config bs-config.js\"",
-    "predev": "tsc -w &"
+    "dev": "concurrently \"nodemon --config nodemon-ejs.json\" \"nodemon --config nodemon-app.json\" \"browser-sync start --config bs-config.js\"",
+    "predev": "tsc -w & node ./dist/Backend.js &"
   },
   "repository": {
     "type": "git",
