--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "initDB": "node ./database/initializeDatabase.mjs",
-    "start": "node ./dist/Proxy.js",
+    "start": "node start.mjs",
     "dev": "concurrently \"nodemon --config nodemon-ejs.json\" \"nodemon --config nodemon-app.json\" \"browser-sync start --config bs-config.js\"",
     "predev": "tsc -w & node ./dist/Backend.js &"
   },
